Add birthdate support and leaderboard filters
